# llm-research-config

./: README.md  pyproject.toml  requirements.txt
src/aihero/research/config/: __init__.py  schema.py
