[project]
name = "aihero-research-config"
version = "0.3.1"
description = "Framework for open source research on fine-tuning LLMs"
authors = [
    {name = "Rahul Parundekar", email= "rahul@aihero.studio" },
    {name = "Shankar Ganesan", email = "gshankar.87@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pydantic==2.6.1",
    "transformers==4.36.1",
    "peft==0.7.1",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5,>=8.0.0", # Consolidated pytest requirements
    "black>=22.3",
    "mypy>=0.910",
    "ruff>=0.0.79",
    "blacken-docs>=1.11.0",
    "pyupgrade>=2.29.1",
    "detect-secrets>=1.2.0",
    "tomli>=1.2.3",
    "pre-commit>=2.17.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "src/tests"

[tool.black]
line_length = 120
target_version = ['py39']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = []
line-length = 120
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
]
src = ["src/aihero", "src/tests"]

[mypy]
files = ["src/aihero"]
strict_optional = false
warn_unused_ignores = false

[tool.mypy]
plugins = "pydantic.mypy"
